[package]
name = "skale-tx-engine"
version = "0.1.0"
edition = "2021"
description = "Ultra-high-performance transaction engine for SKALE Base Sepolia network"

[dependencies]
tokio = { version = "1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
hex = "0.4"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
